# wildenvale

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  levelEditor.py  main.cpp  renderAPI.c  renderAPI.h  test.json
atlas04/: CMakeCache.txt  CMakeLists.txt  createAtlas.sh
atlas04/src/: atlas.c  atlas.h  atlasGen.c  common.h  defs.h  demo.c  demo.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  structs.h  util.c  util.h
data/images/: logo.rc
data/levels/: blockData.json
data/levels/lvl1/: levelConfig.json
data/levels/lvl2/: levelConfig.json
data/levels/lvl3/: levelConfig.json
data/levels/lvl4/: levelConfig.json
data/levels/lvl6/: levelConfig.json
include/SDL3/: SDL.h  SDL_revision.h
include/glad/: glad.h
include/perlin/: example.cpp
lib/: SDL2main.lib  SDL3_mixer.lib  SDL3_net.lib  SDL3_rtf.lib
src/: chunkgen.hpp  engine.hpp  game.hpp  level.hpp  renderer.hpp  spriteatlas.hpp
