cmake_minimum_required(VERSION 3.15...3.31)
project(WarOfDungeons
VERSION 1.0
DESCRIPTION "Pixel art platformer"
LANGUAGES C CXX)

set(CMAKE_CPP_COMPILER g++)
set(CMAKE_MAKE_PROGRAM ninja)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(CMAKE_CXX_FLAGS) # -mwindows)

set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/data/images/logo.rc")

# -Iinclude
include_directories(${CMAKE_SOURCE_DIR}/include)
# -Llib
link_directories(${CMAKE_SOURCE_DIR}/lib)

add_executable(WarOfDungeons
    main.cpp
    renderAPI.c
    ${APP_ICON_RESOURCE_WINDOWS}
)

set(SDL3_LIBRARIES mingw32 SDL3 SDL3_image SDL3_mixer SDL3_ttf)

target_link_libraries(WarOfDungeons PUBLIC ${SDL3_LIBRARIES})